# Flame

./: .gitmodules  Dependencies.md  Makefile.am  README.org  configure.ac  install-dependencies.sh
LFlame3/: Makefile.am
LFlame3-Tests/: Makefile.am
LFlame3-Tests/2D-Shock-Tube/: Makefile.am  mesh.geo  run.sh
LFlame3/data/: flame-mixture.xsd  mixture1.xml
LFlame3/docs/: initial_conditions.org  time_averaging.org  time_stepping.org
LFlame3/include/: boundary_checker.hh  eos.hh  flame.hh  flame.lh  flux.hh  grid_post_processor.hh  initialConditions.hh  logger.hh  mixture.hh  plot.hh  restart.hh  signal_handler.hh  species.hh  utils.hh
LFlame3/src/: IOplot.loci  bcImpermeable.loci  bcInflowOutflow.loci  bcInputs.loci  bcRefs.loci  bcSetup.loci  bcViscousWall.loci  boundaryRefs.loci  boundary_checker.cc  constants.loci  flame.cc  flux.cc  gridMetrics.loci  grid_post_processor.cc  initialConditions.loci  logger.cc  main.cc  mixture.cc  plot.cc  restart.cc  signal_handler.cc  solverCFL.loci  solverDiffusive.loci  solverEoS.loci  solverFaceValues.loci  solverFlowRegime.loci  solverInviscid.loci  solverMultispecies.loci  solverParameters.loci  solverPeriodic.loci  solverPlotting.loci  solverRestart.loci  solverRungeKutta.loci  solverThermodynamics.loci  solverTimeAveraging.loci  solverTimestepping.loci  solverTransport.loci  solverViscous.loci  solverVolumeIntegrated.loci  species.cc  (+2 more)
LFlame3/tests/: test_mixture_specification.cc
m4/: configure_loci.m4
share/flame/: flame-mixture.xsd
